--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.5.0",
     "framer-motion": "^11.0.14",
     "lucide-react": "^0.358.0",
     "mini-svg-data-uri": "^1.4.4",
+    "mongoose": "^8.0.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
